WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139158
Crash in Font::dashesForIntersectionsWithRect() regarding SVG fonts
https://bugs.webkit.org/show_bug.cgi?id=139158
Summary
Crash in Font::dashesForIntersectionsWithRect() regarding SVG fonts
Myles C. Maxfield
Reported
2014-12-01 15:37:18 PST
Crash in Font::dashesForIntersectionsWithRect() regarding SVG fonts
Attachments
Patch
(5.78 KB, patch)
2014-12-01 15:45 PST
,
Myles C. Maxfield
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2014-12-01 15:45:52 PST
Created
attachment 242356
[details]
Patch
Myles C. Maxfield
Comment 2
2014-12-01 15:47:11 PST
<
rdar://problem/18983290
>
Simon Fraser (smfr)
Comment 3
2014-12-01 15:51:03 PST
Comment on
attachment 242356
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=242356&action=review
> Source/WebCore/ChangeLog:3 > + Crash in Font::dashesForIntersectionsWithRect() regarding SVG fonts
"regarding SVG fonts" is a bit vague.
Myles C. Maxfield
Comment 4
2014-12-01 15:55:04 PST
http://trac.webkit.org/changeset/176607
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug